--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Meie+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/fontawesome-free-6.0.0-web/css/all.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    
+    <link rel="icon" href="./assets/fontawesome-free-6.0.0-web/svgs/solid/cake-candles.svg" id="logo-aba" type="image/gif/png">
 
     <title>Tio Seds</title>
 </head>
